src/styles/custom.css
.blue {
  color: #1178ad; 
}

.bg-blue {
  background-color: #1178ad;
}

.b--blue {
  border-color: #1178ad;
}

.dark-blue {
  color: #0075ad;
}

.bg-dark-blue {
  background-color: #0075ad;
}

.b--dark-blue {
  border-color: #0075ad;
}

.navy {
  color: #23527c;
}

.bg-navy {
  background-color: #23527c;
}

.b--navy {
  border-color: #23527c;
}

.lightest-blue {
  color: #9bd4f4;
}

.bg-lightest-blue {
  background-color: #9bd4f4;
}

.b--lightest-blue {
  border-color: #9bd4f4;
}

.washed-blue {
  color: #dce9f6;
}

.bg-washed-blue {
  background-color: #dce9f6;
}

.b--washed-blue {
  border-color: #dce9f6;
}

.red {
  color: #99312a;
}

.bg-red {
  background-color: #99312a !important;
}

.b--red {
  border-color: #99312a;
}

.green {
  color: #5d9632 !important;
}

.bg-green {
  background-color: #5d9632;
}

.b--green {
  border-color: #5d9632;
}

.purple {
  color: #522e75;
}

.bg-purple {
  background-color: #522e75 !important;
}

.b--purple {
  border-color: #522e75;
}

.orange {
  color: #d4652d;
}

.bg-orange {
  background-color: #d4652d !important;
}

.b--orange {
  border-color: #d4652d;
}

.light-yellow {
  color: #fff698;
}

.bg-light-yellow {
  background-color: #fff698;
}

.b--light-yellow {
  border-color: #fff698;
}

.gray {
  color: #d5d5d5;
}

.bg-gray {
  background-color: #d5d5d5;
}

.b--gray {
  border-color: #d5d5d5;
}


.iciLogo {
  background-image: url(/images/ICI.png);
}



html {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
  font-family: "Open Sans", sans-serif;
}

/* Make footer sticky */
html,
body {
  height: 100%;
}

.main-content {
  flex: 1 0 auto;
}




article,
aside,
header,
nav,
footer,
section {
  display: block;
}

section { padding-bottom: 2em; }


figure {
  padding: 0;
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Open Sans", sans-serif;
}

h1 {
  font-size: 2rem;
  margin: 0.67em 0;
}

a {
  text-decoration: underline;
}


a:focus {
	outline: 1px dotted currentColor;
	outline-offset: .125rem;
}

a:active {
	outline-width: 0;
}


a:hover {
  text-decoration: underline;
}

/*
a:link,
a:visited {
	color: #1178AD;

}
*/
.w-15 {
  width: 15%;
}





/** Footer **/
 
footer a:link {
  color: #fff;
}

footer a:active,
footer a:visited,
li a:target {
  color: #fff;
  opacity: 0.8;
}

footer a:hover {
  color: #fff;
  opacity: 0.8;
  text-decoration: underline;
}

@media screen and (max-width: 576px) {
  .show-sibling:checked + .sibling {
    display: block;
  }
  .sibling {
    display: none;
  }
}

@media screen and (min-width: 576px) {
  .hide-child-ns .child {
    opacity: 0;
    transition: opacity 0.15s ease-in;
  }
  .hide-child-ns:hover .child {
    opacity: 1;
  }
}

.flex-1 {
  flex: 1;
}

.flex-container {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: justify;
  align-content: space-between;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}

.flex-item {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-align-self: auto;
  -ms-flex-item-align: auto;
  align-self: auto;
}

#banner-text {
  font-family: myriad-pro-condensed, "Open Sans Condensed", sans-serif;
  font-weight: 600;
  font-style: normal;
  text-align: center;
  display: block;
  border-bottom-width: 0;
}

@media screen and (max-width: 380px) {
  #banner-text {
    font-size: 1.6rem;
    text-align: left;
    line-height: 1.8rem;
  }
}

@media screen and (min-width: 381px) and (max-width: 480px) {
  #banner-text {
    font-size: 2.1rem;
    text-align: left;
    line-height: 2.3rem;
  }
}

@media screen and (min-width: 481px) and (max-width: 768px) {
  #banner-text {
    font-size: 2.6rem;
    text-align: left;
    line-height: 2.8rem;
  }
}

@media screen and (min-width: 769px) and (max-width: 1028px) {
  #banner-text {
    font-size: 3rem;
    text-align: left;
    line-height: 3.2rem;
  }
}

@media screen and (min-width: 1029px) {
  #banner-text {
    font-size: 3.5rem;
   /* text-align: left;*/
    line-height: 3.7rem;
  }
}
#banner-tagline {
  font-family: myriad-pro-condensed, "Open Sans Condensed", sans-serif;
  font-weight: 400;
  letter-spacing: 4px;
  font-style: normal;
  text-align: center;
}

@media screen and (max-width: 35em) {
  #banner-tagline {
    font-family: myriad-pro-condensed, "Open Sans Condensed", sans-serif;
    letter-spacing: 1.4px;
  }
}

/*! CSS Used from: https://dwyl.com/css/dwyl.css */

.dwyl-bg-dark-gray {
  background-color: #45535b;
}

.dwyl-bg-gold {
  background-color: #c6ac5c;
}

.w1-plus {
  width: 1.5rem;
}

@media (min-width: 768px) {
  .w1-plus {
    width: 1.5rem;
  }
}

/* Buttons */

.button {
  background-color: #0075ad;
  color: white;
  cursor: pointer;
  font-weight: 700;
  padding: 1rem;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.4s ease;
}

.button:hover {
  background-color: rgba(76, 142, 201, 0.9);
}

.button--small {
  padding: 0.5rem;
  text-transform: none;
  font-weight: 500;
  background-color: #0075ad;
}

/* Pageination */

.page-navigation {
  margin: 2rem 0;
  text-align: center;
}

.page-navigation a {
  border: rgba(76, 142, 201, 0.7) 1px solid;
  margin: 2px;
  padding: 0.5rem;
  text-decoration: none;
}

/* Breadcrumbs */

.breadcrumbs-wrapper {
  background-color: #e1e1e1;
}

a.crumb {
  color: #23527c !important;
  font-weight: normal;
}
/* ... */

